--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
+    "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
