--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
+    "keymirror": "^0.1.1",
     "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
