--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
