--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "^0.15.3",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "https": "^1.0.0",
     "immutable": "^3.8.1",
     "keymirror": "^0.1.1",
     "morgan": "^1.7.0",
